# simu_sate

./: .gitignore  CMakeLists.txt  CROSS_PLATFORM_BUILD.md  C_API_README.md  DYNAMIC_LIBRARY_SUMMARY.md  README.md  build_dynamic_library.ps1  build_dynamic_library.sh
cmake/: J2OrbitPropagatorConfig.cmake.in
docker/: BASE_IMAGE_USAGE.md  DOCKER_TROUBLESHOOTING.md  Dockerfile  Dockerfile.base  Dockerfile.windows  README-动态库路径说明.md  build-base.ps1  build.ps1  build.sh  configure-docker-mirror.ps1  daemon.json  docker-compose.yml
docs/: CROSS_PLATFORM_BUILD.md  DYNAMIC_LIBRARY_SUMMARY.md  ECI坐标系下施加脉冲后轨道根数计算指南（含平近点角及C格式结构体）.md  J2OrbitPropagator使用手册.md  J2Orbit_DotNet_API.md  pulse.md  轨道根数计算及脉冲机动逻辑漏洞检测与修复方案.md
docs/docker/: DOCKER_TROUBLESHOOTING.md  README-动态库路径说明.md
docs/tests/: TEST_SCRIPT_USAGE.md
example/: CSharpBindingExample.cs  build_and_run_c.ps1  build_and_run_csharp.ps1  c_example.c  memory_layout_check.c  python_binding_example.py
example/csharp/: J2Orbit.cs  J2Orbit.csproj  J2OrbitPropagator.sln  build_and_test_csharp.ps1
example/csharp/J2Orbit.Library/: J2Orbit.Library.csproj  J2Orbit.Library.targets  J2Orbit.cs
example/csharp/J2Orbit.TestApp/: J2Orbit.TestApp.csproj  Program.cs
example/csharp/MemoryLayoutTest/: MemoryLayoutTest.csproj  Program.cs
example/csharp/TestProject/: TestProject.csproj  TestProject.sln
include/: common_types.h  constellation_propagator.h  constellation_propagator_c.h  j2_orbit_propagator.h  j2_orbit_propagator_c.h  math_constants.h  math_defs.h
scripts/: README.md  build.bat  build.ps1  build.sh  build_dynamic_library.ps1  build_dynamic_library.sh  build_visualization.ps1  build_visualization.sh  run_visualization.ps1
scripts/docker/: build.ps1  build.sh  configure-docker-mirror.ps1
scripts/example/: build_and_run_c.ps1  build_and_run_csharp.ps1
scripts/example/csharp/: build_and_test_csharp.ps1
scripts/tests/: build_and_run_tests.ps1
src/: constellation_demo.cpp  constellation_propagator.cpp  constellation_propagator_c.cpp  j2_cuda_kernels.cu  j2_orbit_propagator.cpp  j2_orbit_propagator_c.cpp  main.cpp
tests/: CMakeLists.txt  TEST_SCRIPT_USAGE.md  build_and_run_tests.ps1  build_integration_tests.ps1  build_unit_tests.ps1
tests/integration/: CMakeLists.txt  cuda_consistency_test.cpp  impulse_consistency_test.cpp  integration_test_example.cpp  mode_consistency_regression_test.cpp  parameter_sweep_test.cpp  simd_consistency_test.cpp
tests/performance/: CMakeLists.txt  constellation_benchmark_test.cpp
tests/unit/: CMakeLists.txt  single_satellite_propagation_test.cpp
visualization/: CMakeLists.txt  README.md
visualization/cmake/: J2VisualizationConfig.cmake.in
visualization/docs/: API_Reference.md  README.md  VULKAN_SETUP.md
visualization/examples/: orbit_visualization_demo.cpp
visualization/include/: earth_renderer.h  j2_orbit_integration.h  orbit_renderer.h  visualization_types.h  vulkan_renderer.h
visualization/shaders/: earth.frag  earth.vert  orbit.frag  orbit.vert  satellite.vert
visualization/src/: earth_renderer.cpp  j2_orbit_integration.cpp  orbit_renderer.cpp  visualization_types.cpp  vulkan_renderer.cpp
